--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>Educare</title>
 </head>
 <body>
+  <header>
+    <div class="container">
+      <div class="logo">
+        <img src="/assets/logo-educare.svg" alt="logo educare">
+        <span>Educare</span>
+      </div>
+      <div class="list-menu">
+        <ul>
+          <li><span>Home</span></li>
+          <li><span>About</span></li>
+          <li><span>Courses</span><img src="/assets/arrow-down.svg" alt="arrow down"></li>
+          <li><span>Blog</span><img src="/assets/arrow-down.svg" alt="arrow down"></li>
+        </ul>
+        <button><span>Contact us</span></button>
+      </div>
+    </div>
+  </header>
   
 </body>
 </html>
