begginging coding main section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,63 @@
           <li><span>Courses</span><img src="/assets/arrow-down.svg" alt="arrow down"></li>
           <li><span>Blog</span><img src="/assets/arrow-down.svg" alt="arrow down"></li>
         </ul>
-        <button><span>Contact us</span></button>
+        <button>Contact us</button>
       </div>
     </div>
   </header>
-  
+  <main>
+    <!-- First section -->
+    <section class="double">
+      <div>
+        <h2>Start learning with us now</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa laboriosam  voluptates sed beatae?</p>
+        <button class="btn-brown">Start learning</button>
+      </div>
+      <figure>
+        <img src="assets/image-1.png" alt="learning image">
+      </figure>
+    </section>
+    <!-- Seconde section -->
+    <section>
+      <figure>
+        <img src="assets/image-2.png" alt="online center image">
+      </figure>
+      <div class="left-space">
+        <h2>Welcome to the online centers</h2>
+        <ul>
+          <li>Start learning from your experience</li>
+          <li>Enhance your skills with us now</li>
+          <li>Do your favorite course</li>
+        </ul>
+      </div>
+      
+      
+    </section>
+    <!-- Third section -->
+    <section>
+      <h2>Start learning by creating free account and get register</h2>
+      <img src="assets/image-3.png" alt="learning woman image">
+      <div>
+        <form action="submit">
+          <input type="text">
+          <input type="text">
+          <button>Subscribe</button>
+        </form>
+      </div>
+    </section>
+    <!-- Fourth section -->
+    <section>
+      <h2>Start growing with our community</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit </p>
+      <button>Join community</button>
+      <img src="assets/image-4.png" alt="community image">
+      <img src="assets/teacher-1.jpg" alt="teacher 1">
+      <img src="assets/teacher-2.jpg" alt="teacher 2">
+      <img src="assets/teacher-3.jpg" alt="teacher 3">
+      <img src="assets/teacher-4.jpg" alt="teacher 4">
+    </section>
+
+
+  </main>
 </body>
 </html>
